* [AmountRangeField] Fixed overflow of right border corners and changed text align to the left

--- a/src/view/Components/Fields/AmountRangeField/AmountRangeField.scss
+++ b/src/view/Components/Fields/AmountRangeField/AmountRangeField.scss
@@ -7,6 +7,8 @@
 
   .input-group {
     --ig-hor-padding: 0.5rem;
+
+    overflow: hidden;
   }
 
   .input-group__text {
